--- a/index.html
+++ b/index.html
@@ -151,19 +151,19 @@
     © 2025 Linguava. Built with ❤️ to help you learn better.
   </footer>
     <!-- Watson Assistant Script -->
-  <script>
-    window.watsonAssistantChatOptions = {
-      integrationID: "YOUR-INTEGRATION-ID",  // 🔁 Replace with your actual integration ID
-      region: "us-south",                    // 🔁 Your region (most likely us-south)
-      serviceInstanceID: "YOUR-SERVICE-ID",  // 🔁 Replace with your actual service instance ID
-      onLoad: function(instance) { instance.render(); }
-    };
-    setTimeout(function () {
-      const t = document.createElement('script');
-      t.src = "https://web-chat.global.assistant.watson.appdomain.cloud/versions/latest/WatsonAssistantChatEntry.js";
-      document.head.appendChild(t);
-    });
-  </script>
+ <script>
+  window.watsonAssistantChatOptions = {
+    integrationID: "939d047e-3175-4c10-b598-d8db0b82baf6", // The ID of this integration.
+    region: "us-south", // The region your integration is hosted in.
+    serviceInstanceID: "3e9498a9-924b-4f71-831c-0522f2be3709", // The ID of your service instance.
+    onLoad: async (instance) => { await instance.render(); }
+  };
+  setTimeout(function(){
+    const t=document.createElement('script');
+    t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
+    document.head.appendChild(t);
+  });
+</script>
 
 </body>
 </html>
